<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginIdEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:hint="@string/login_id"
        android:inputType="text"
        android:padding="14dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLogo" />

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/gray"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginIdEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_shape"
        android:padding="10dp"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordEditText" />


    <TextView
        android:id="@+id/findPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_find_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/login_find_password"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />


    <TextView
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/login_signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/login_signup"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintVertical_bias="0.1" />


</androidx.constraintlayout.widget.ConstraintLayout>

